// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsContext renders correctly with activeTabId 1`] = `
<div
  className="tabs-context--wrapper"
  data-testid="tab-list"
  id=""
>
  <div
    className="tabsWrapper tabs--wrapper Compact"
    data-testid="tab-list"
    id=""
  >
    <ul
      className="tabsList tabs-list undefined"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={false}
        className="tab--wrapper"
        id=""
        role="tab"
      >
        <a
          className="tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tab--wrapper active"
        id=""
        role="tab"
      >
        <a
          className="tab-inner"
          onClick={[Function]}
        >
          Second
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
    id=""
  >
    <div
      className="tab-panel--wrapper tabPanel tab-panel non-active"
      id=""
      role="tabpanel"
    >
      First slide
    </div>
    <div
      className="tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      id=""
      role="tabpanel"
    >
      Second slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with className 1`] = `
<div
  className="tabs-context--wrapper test"
  data-testid="tab-list"
  id=""
>
  <div
    className="tabsWrapper tabs--wrapper Compact"
    data-testid="tab-list"
    id=""
  >
    <ul
      className="tabsList tabs-list undefined"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tab--wrapper active"
        id=""
        role="tab"
      >
        <a
          className="tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
    id=""
  >
    <div
      className="tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      id=""
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with empty props 1`] = `
<div
  className="tabs-context--wrapper"
  data-testid="tab-list"
  id=""
>
  <div
    className="tabsWrapper tabs--wrapper Compact"
    data-testid="tab-list"
    id=""
  >
    <ul
      className="tabsList tabs-list undefined"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tab--wrapper active"
        id=""
        role="tab"
      >
        <a
          className="tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
    id=""
  >
    <div
      className="tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      id=""
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;

exports[`TabsContext renders correctly with id 1`] = `
<div
  className="tabs-context--wrapper"
  data-testid="tab-list_test"
  id="test"
>
  <div
    className="tabsWrapper tabs--wrapper Compact"
    data-testid="tab-list"
    id=""
  >
    <ul
      className="tabsList tabs-list undefined"
      role="tablist"
      tabIndex={0}
    >
      <li
        aria-disabled={false}
        aria-selected={true}
        className="tab--wrapper active"
        id=""
        role="tab"
      >
        <a
          className="tab-inner"
          onClick={[Function]}
        >
          First
        </a>
      </li>
    </ul>
  </div>
  <div
    className="tabPanelsWrapper tab-panels--wrapper"
    data-testid="tab-panels"
    id=""
  >
    <div
      className="tab-panel--wrapper tabPanel tab-panel active active animationDirectionRtl animation-direction-rtl"
      id=""
      role="tabpanel"
    >
      First slide
    </div>
  </div>
</div>
`;
